<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg2"
        app:columnCount="2"
        app:rowCount="4">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            >

            <ImageButton
                android:id="@+id/buttonGET"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/click1_l"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/badgeGet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_getstorage"
                android:textSize="18sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonGET" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            >

            <ImageButton
                android:id="@+id/buttonOut"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/goout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/badgegoout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_gooutstorage"
                android:textSize="18sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintTop_toBottomOf="@+id/buttonOut"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1">

            <ImageButton
                android:id="@+id/buttonMove"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/move"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/badgeMove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_movestorage"
                android:textSize="18sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonMove" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1">

            <ImageButton
                android:id="@+id/buttonExit"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/exitstorage"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/badgeEXit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_Exitstorage"
                android:textSize="18sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonExit" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2">

            <ImageButton
                android:id="@+id/buttoncheck"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/incheck"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/badgecheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_InventoryChecker"
                android:textSize="18sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorWhite"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttoncheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="2">

            <ImageButton
                android:id="@+id/buttonclookat"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/lookat"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/badgelookat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_lookatstorage"
                android:textSize="18sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonclookat" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="3">

            <ImageButton
                android:id="@+id/buttonSetting"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/badgeseeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_seeting"
                android:textSize="18sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSetting" />
        </androidx.constraintlayout.widget.ConstraintLayout>










        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="3">

            <ImageButton
                android:id="@+id/buttonLogin"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/login_log"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/LoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="登录"
                android:textSize="18sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.gridlayout.widget.GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>